project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ 4.2.2/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/Applications/BlueJ 4.2.2/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/ragrawal24/Desktop/project
-d
/Users/ragrawal24/Desktop/project/doc
-encoding
UTF-8
-charset
UTF-8
/Users/ragrawal24/Desktop/project/Intro.java
<---- end of javadoc command ---->
Loading source file /Users/ragrawal24/Desktop/project/Intro.java...
/Users/ragrawal24/Desktop/project/Intro.java:15: error: class, interface, or enum expected
}
^
1 error
